Update workshop steps